WP-6649: fix spacing.

--- a/sass/conditionals/exec-ed/design-exec-ed.sass
+++ b/sass/conditionals/exec-ed/design-exec-ed.sass
@@ -589,11 +589,14 @@ h1.ee-section-header-title
 #block-gsb-feature-program-ct-ee-section-apply-brochure
   +clearfix
 .ee-section-apply-brochure
+  +clearfix
   float: right
   max-width: 270px
   .apply-button,
   .download-brochure
     display: inline-block
+  .apply-button
+    float: left
   .download-brochure
     border-left: 1px #d50707 solid
   a
